Bug 492837. If a scrollframe's reflow is interrupted, don't clamp the scroll position to the new size. r=bzbarsky

--HG--
extra : rebase_source : f0def3a670f208e5894cdbd650d395d991441c34